--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -1346,7 +1346,9 @@ html.swipebox-html.swipebox-touch{overflow:hidden!important}#swipebox-overlay im
             margin-right: 0;
         }
     }
-    #pagecontent header #logo img {
+    #pagecontent header #logo img,
+    header #logo img
+    {
         width: 100px;
     }
     #page-header {
