--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2891,6 +2891,26 @@ footer img.footer-logo {
   #maininvestment .maininvest-cta .bttn {
     padding: 16px 30px;
   }
+  #gallery .slick-arrow {
+    width: 50px;
+    height: 50px;
+  }
+  #gallery .slick-slide.gallery-item {
+    padding: 0 10px;
+  }
+  #gallery .slick-arrow.slick-prev {
+    left: 20px;
+  }
+  #gallery .slick-arrow.slick-next {
+    right: 20px;
+  }
+  #gallery .gallery-catalog div {
+    left: 10px;
+    right: 10px;
+  }
+  #gallery .gallery-item h2 {
+    font-size: 45px;
+  }
 }
 /* end of 991.98 */
 @media (max-width: 767.98px) {
@@ -3002,6 +3022,12 @@ footer img.footer-logo {
   }
   #mainwhy {
     padding: 0 15px 45px;
+  }
+  #gallery .gallery-item h2 {
+    font-size: 27px;
+  }
+  #gallery .gallery-item .bttn {
+    padding: 10px 36px;
   }
 }
 /* end of 767.98 */
@@ -3169,6 +3195,9 @@ footer img.footer-logo {
   #mainlocation .bttn,
   .bttn {
     padding: 16px 28px;
+  }
+  #page-header h1 {
+    font-size: 27px;
   }
 }
 /* end of 359.98 */
