--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -1738,6 +1738,26 @@ html.swipebox-html.swipebox-touch{overflow:hidden!important}#swipebox-overlay im
     {
         padding: 16px 30px;
     }
+    #gallery .slick-arrow {
+        width: 50px;
+        height: 50px;
+    }
+    #gallery .slick-slide.gallery-item {
+        padding: 0 10px;
+    }
+    #gallery .slick-arrow.slick-prev {
+        left: 20px;
+    }
+    #gallery .slick-arrow.slick-next {
+        right: 20px;
+    }
+    #gallery .gallery-catalog div {
+        left: 10px;
+        right: 10px
+    }
+    #gallery .gallery-item h2 {
+        font-size: 45px
+    }
 }
 /* end of 991.98 */
 
@@ -1860,6 +1880,12 @@ html.swipebox-html.swipebox-touch{overflow:hidden!important}#swipebox-overlay im
     }
     #mainwhy {
         padding: 0 15px 45px;
+    }
+    #gallery .gallery-item h2 {
+        font-size: 27px;
+    }
+    #gallery .gallery-item .bttn {
+        padding: 10px 36px;
     }
 }
 /* end of 767.98 */
@@ -2048,6 +2074,9 @@ html.swipebox-html.swipebox-touch{overflow:hidden!important}#swipebox-overlay im
     .bttn
     {
         padding: 16px 28px;
+    }
+    #page-header h1 {
+        font-size: 27px;
     }
 }
 
