--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -1887,6 +1887,19 @@ html.swipebox-html.swipebox-touch{overflow:hidden!important}#swipebox-overlay im
     #gallery .gallery-item .bttn {
         padding: 10px 36px;
     }
+
+    #gallery .slick-current div {
+        opacity: 1;
+        visibility: visible;
+    }
+    #gallery .slick-current div h2 {
+        opacity: 1;
+        top: 0;
+    }
+    #gallery .slick-current div .bttn {
+        opacity: 1;
+        margin-top: 50px;
+    }
 }
 /* end of 767.98 */
 
@@ -2007,6 +2020,9 @@ html.swipebox-html.swipebox-touch{overflow:hidden!important}#swipebox-overlay im
     #mainwhy .why-carousel-left .why-carousel-item
     {
         padding-bottom: 130px;
+    }
+    #gallery .gallery-item h2 {
+        font-size: 22px;
     }
 }
 /* end of 575.98 */
