--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -1917,6 +1917,9 @@ html.swipebox-html.swipebox-touch{overflow:hidden!important}#swipebox-overlay im
     #page {
         padding: 30px 15px
     }
+    .gallery #page {
+        padding: 30px 0
+    }
     #contact-form {
         padding: 10px 20px 25px
     }
@@ -2023,6 +2026,13 @@ html.swipebox-html.swipebox-touch{overflow:hidden!important}#swipebox-overlay im
     }
     #gallery .gallery-item h2 {
         font-size: 22px;
+    }
+    #gallery .slick-slide.gallery-item {
+        padding: 0;
+    }
+    #gallery .gallery-catalog div {
+        left: 0;
+        right: 0
     }
 }
 /* end of 575.98 */
