--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -1212,7 +1212,7 @@ html.swipebox-html.swipebox-touch{overflow:hidden!important}#swipebox-overlay im
 }
 
 #triggermenu {display:none;float:right;font-size:16px;color:white;font-weight:600;text-transform:uppercase;margin:2px 0 0;padding:5px 12px;transition:all 200ms linear;background:#222;cursor: pointer}
-#triggermenu:hover {background:#b79a5e}
+#triggermenu:hover {background:#b79a5e;color:white}
 .openmenu #triggermenu {color: #b79a5e}
 #triggermenu:before {font-family:'FontAwesome';content:"\f0c9";margin-right:10px;font-weight:normal;width: 14px;display: inline-block;}
 .openmenu #triggermenu:before {content:"\f00d"}
