--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -1089,6 +1089,26 @@ html.swipebox-html.swipebox-touch{overflow:hidden!important}#swipebox-overlay im
     a {
         color: #444;
     }
+    h4 {
+        font-weight: 600;
+        font-size: 31px;
+        margin: 0;
+    }
+    i.la-id-card-alt {
+        color: #b79a5e;
+        font-size: 37px;
+    }
+    p {
+        line-height: normal;
+    }
+}
+.phones p {
+    font-size: 20px;
+    b {
+        display: block;
+        width: 100%;
+        margin: 6px 0;
+    }
 }
 
 #contact-form {
@@ -1571,6 +1591,9 @@ html.swipebox-html.swipebox-touch{overflow:hidden!important}#swipebox-overlay im
     .contact-box {
         padding: 20px 0;
         margin-bottom: 15px;
+        h4 {
+            font-size: 26px;
+        }
     }
     #contact-form {
         margin-bottom: 30px
@@ -1900,6 +1923,15 @@ html.swipebox-html.swipebox-touch{overflow:hidden!important}#swipebox-overlay im
     #gallery .slick-current div .bttn {
         opacity: 1;
         margin-top: 50px;
+    }
+    .contact-box {
+        h4 {
+            margin: 15px 0 25px;
+        }
+        p {
+            line-height: normal;
+            font-size: 14px;
+        }
     }
 }
 /* end of 767.98 */
