--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -190,6 +190,15 @@ button {
   width: 100%;
   height: 100%;
 }
+/* Fonty
+================================================== */
+@font-face {
+  font-family: 'FontAwesome';
+  src: url('../fonts/fontawesome-webfont.eot');
+  src: url('../fonts/fontawesome-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/fontawesome-webfont.woff') format('woff'), url('../fonts/fontawesome-webfont.ttf') format('truetype'), url('../fonts/fontawesome-webfont.svg#fontawesomeregular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
 /* Nadpisz Bootstrap
 ================================================== */
 body {
