--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -34,6 +34,10 @@ input, label, select, button, textarea {margin:0;border:0;padding:0;display:inli
     }
 }
 
+/* Fonty
+================================================== */
+@font-face{font-family:'FontAwesome';src:url('../fonts/fontawesome-webfont.eot');src:url('../fonts/fontawesome-webfont.eot?#iefix') format('embedded-opentype'),url('../fonts/fontawesome-webfont.woff') format('woff'),url('../fonts/fontawesome-webfont.ttf') format('truetype'),url('../fonts/fontawesome-webfont.svg#fontawesomeregular') format('svg');font-weight:normal;font-style:normal}
+
 /* Nadpisz Bootstrap
 ================================================== */
 body {
