--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -1411,6 +1411,9 @@ html.swipebox-html.swipebox-touch{overflow:hidden!important}#swipebox-overlay im
             }
         }
     }
+    #swipebox-close {
+        top: 70px
+    }
 }
 /* end of 1389.98 */
 
