Poprawki Dominika cz.1

--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -2064,15 +2064,20 @@ html.swipebox-html.swipebox-touch{overflow:hidden!important}#swipebox-overlay im
     {
         padding-bottom: 130px;
     }
-    #gallery .gallery-item h2 {
-        font-size: 22px;
-    }
-    #gallery .slick-slide.gallery-item {
-        padding: 0;
-    }
-    #gallery .gallery-catalog div {
-        left: 0;
-        right: 0
+    #gallery {
+        .gallery-item h2 {
+            font-size: 22px;
+        }
+        .slick-slide.gallery-item {
+            padding: 0;
+        }
+        .gallery-catalog div {
+            left: 0;
+            right: 0
+        }
+        .gallery-item img {
+            opacity: 1;
+        }
     }
 }
 /* end of 575.98 */
