--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3205,6 +3205,9 @@ footer img.footer-logo {
     left: 0;
     right: 0;
   }
+  #gallery .gallery-item img {
+    opacity: 1;
+  }
 }
 /* end of 575.98 */
 @media (max-width: 420px) {
