--- a/public/css/less-partials/slider.less
+++ b/public/css/less-partials/slider.less
@@ -5,5 +5,158 @@
     .slider-carousel {
         min-width: 100vw;
         min-height: 100vh;
+        position: relative;
+    }
+
+    .slider-apla {
+        position: absolute;
+        left: 0;
+        right: 0;
+        margin: auto;
+        bottom: 130px;
+        width: 900px;
+        h1 {
+            color: white;
+            font-weight: 400;
+            font-size: 98px;
+            text-align: center;
+            margin-bottom: 50px;
+        }
+        .btn-light {
+            background: none;
+            border-radius: 0;
+            height: 80px;
+            padding: 0 30px;
+        }
+        .bttn {
+            border-color: white;
+            border-radius: 0;
+            margin: 0;
+            height: 80px;
+            width: 100%;
+            padding: 0 30px;
+            font-size: 18px;
+            text-transform: uppercase;
+            font-weight: 600;
+            color: white;
+            display: flex;
+            align-items: center;
+            justify-content: left;
+            &:hover {
+                -webkit-box-shadow: 0 3px 5px 0 rgba(0,0,0,0);
+                -moz-box-shadow: 0 3px 5px 0 rgba(0,0,0,0);
+                box-shadow: 0 3px 5px 0 rgba(0,0,0,0);
+                top: 0;
+            }
+            i {
+                font-size: 18px;
+                border: 1px solid white;
+                border-radius: 50%;
+                width: 40px;
+                height: 40px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                position: absolute;
+                right: 30px;
+            }
+        }
+    }
+    form {
+        background: rgba(0,0,0,0.7);
+    }
+    .filter-option-inner {
+        height: 100%;
+    }
+    .bootstrap-select .dropdown-toggle .filter-option-inner-inner {
+        overflow: hidden;
+        height: 100%;
+        color: white;
+        font-weight: 600;
+        text-transform: uppercase;
+        font-size: 18px;
+        display: flex;
+        align-items: center;
+    }
+    .bootstrap-select:not([class*="col-"]):not([class*="form-control"]):not(.input-group-btn) {
+        width: 100%;
+    }
+    .bootstrap-select > .dropdown-toggle:after {
+        display: none;
+    }
+    .bootstrap-select .dropdown-toggle:focus,
+    .bootstrap-select > select.mobile-device:focus + .dropdown-toggle {
+        outline: thin dotted #333 !important;
+        outline-offset: 0;
+    }
+    .btn-check:focus + .btn-light,
+    .btn-light:focus {
+        box-shadow: 0 0 0 0 rgba(211,212,213,0);
+    }
+}
+
+
+
+@media (max-width: 991.98px) {
+    #slider {
+        .slider-apla h1 {
+            font-size: 68px;
+            margin-bottom: 30px;
+        }
+        .slider-apla {
+            bottom: 100px;
+            width: 730px;
+            .btn-light,
+            .bttn {
+                height: 60px;
+                padding: 0 20px;
+                i {
+                    width: 35px;
+                    height: 35px;
+                    right: 20px;
+                }
+            }
+        }
+    }
+}
+/* end of 991.98 */
+
+@media (max-width: 767.98px) {
+    #slider {
+        .slider-apla {
+            bottom: 80px;
+            width: 100%;
+            padding: 0 30px;
+            h1 {
+                font-size: 48px;
+                margin-bottom: 10px;
+            }
+        }
+    }
+}
+/* end of 767.98 */
+
+@media (max-width: 575.98px) {
+    #slider .slider-apla .btn-light,
+    #slider .slider-apla .bttn {
+        height: 50px;
+        padding: 0 15px;
+    }
+    #slider .bootstrap-select .dropdown-toggle .filter-option-inner-inner,
+    #slider .slider-apla .bttn {
+        font-size: 14px
+    }
+    #slider .slider-apla .btn-light i,
+    #slider .slider-apla .bttn i {
+        width: 30px;
+        height: 30px;
+        right: 15px;
+    }
+}
+
+@media (max-width: 480px) {
+    #slider .col-4 {
+        flex: 0 0 auto;
+        width: 100%;
     }
 }
