Poprawki Dominika cz.2

--- a/public/css/less-partials/slider.less
+++ b/public/css/less-partials/slider.less
@@ -152,6 +152,11 @@
         height: 30px;
         right: 15px;
     }
+    #slider .slider-apla {
+        height: 120px;
+        top: 0;
+        bottom: 0;
+    }
 }
 
 @media (max-width: 480px) {
@@ -159,4 +164,5 @@
         flex: 0 0 auto;
         width: 100%;
     }
+
 }
