--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -608,6 +608,9 @@ header.fixed .header-menu li {
     flex: 0 0 auto;
     width: 100%;
   }
+  #slider .slider-apla {
+    height: 220px;
+  }
 }
 /* Homepage
 ================================================== */
