Optymalizacja cz.1 - slider

--- a/public/css/less-partials/slider.less
+++ b/public/css/less-partials/slider.less
@@ -95,7 +95,12 @@
     }
 }
 
-
+@media (max-width: 1199.98px) {
+    #slider {
+        background: #222 url("../../uploads/header_1199.jpg") center bottom no-repeat;
+    }
+}
+/* end of 1199.98 */
 
 @media (max-width: 991.98px) {
     #slider {
@@ -140,6 +145,9 @@
 /* end of 767.98 */
 
 @media (max-width: 575.98px) {
+    #slider {
+        background: #222 url("../uploads/header_600.jpg") center bottom no-repeat;
+    }
     #slider .slider-apla .btn-light,
     #slider .slider-apla .bttn {
         height: 50px;
