--- a/public/css/less-partials/slider.less
+++ b/public/css/less-partials/slider.less
@@ -98,6 +98,7 @@
 @media (max-width: 1199.98px) {
     #slider {
         background: #222 url("../../uploads/header_1199.jpg") center bottom no-repeat;
+        background-size: cover;
     }
 }
 /* end of 1199.98 */
@@ -146,7 +147,8 @@
 
 @media (max-width: 575.98px) {
     #slider {
-        background: #222 url("../uploads/header_600.jpg") center bottom no-repeat;
+        background: #222 url("../../uploads/header_600.jpg") center bottom no-repeat;
+        background-size: cover;
     }
     #slider .slider-apla .btn-light,
     #slider .slider-apla .bttn {
