--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -262,6 +262,18 @@ iframe {
   display: block;
   border: 0;
 }
+.fluidMedia {
+  position: relative;
+  padding-bottom: 56.25%;
+  /* 16:9, for an aspect ratio of 1:1 change to this value to 100% */
+}
+.fluidMedia iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 .navbar {
   justify-content: flex-end;
   padding: 0;
