--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -69,6 +69,10 @@ iframe {
     display: block;
     border: 0;
 }
+#fluidFrame {
+    padding: 30px;
+    background: #213c13 url('../gfx/green-bg.png');
+}
 .fluidMedia {
     position: relative;
     padding-bottom: 56.25%; /* 16:9, for an aspect ratio of 1:1 change to this value to 100% */
