--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -1018,8 +1018,9 @@ section {
                 &:hover, &.active {
                     color: white;
                 }
-                &:hover i {
+                &:hover i, &.active i {
                     background: white;
+                    border: 1px solid rgba(255, 255, 255, 1);
                 }
             }
         }
