--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8302,7 +8302,7 @@ select.selectpicker {
   font-family: 'Line Awesome Brands';
   font-style: normal;
   font-weight: 400;
-  font-display: auto;
+  font-display: swap;
   src: url(../fonts/la-brands-400.eot);
   src: url(../fonts/la-brands-400.eot?#iefix) format("embedded-opentype"), url(../fonts/la-brands-400.woff2) format("woff2"), url(../fonts/la-brands-400.woff) format("woff"), url(../fonts/la-brands-400.ttf) format("truetype"), url(../fonts/la-brands-400.svg#lineawesome) format("svg");
 }
@@ -8313,7 +8313,7 @@ select.selectpicker {
   font-family: 'Line Awesome Free';
   font-style: normal;
   font-weight: 400;
-  font-display: auto;
+  font-display: swap;
   src: url(../fonts/la-regular-400.eot);
   src: url(../fonts/la-regular-400.eot?#iefix) format("embedded-opentype"), url(../fonts/la-regular-400.woff2) format("woff2"), url(../fonts/la-regular-400.woff) format("woff"), url(../fonts/la-regular-400.ttf) format("truetype"), url(../fonts/la-regular-400.svg#lineawesome) format("svg");
 }
