--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1387,6 +1387,48 @@ section {
     font-size: 14px;
   }
 }
+/* Blog/news
+================================================== */
+#main-news .container {
+  background: url("../gfx/light-bg.png");
+  padding: 30px;
+  position: relative;
+  -webkit-transition: all 200ms linear;
+  -moz-transition: all 200ms linear;
+  -o-transition: all 200ms linear;
+  transition: all 200ms linear;
+  -webkit-box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0);
+  -moz-box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0);
+  box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0);
+  top: 0;
+}
+#main-news .container:hover {
+  top: -5px;
+  -webkit-box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.38);
+  -moz-box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.38);
+  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.38);
+}
+#main-news .article-header h2 {
+  margin-bottom: 20px;
+}
+#main-news .article-header h2 a {
+  color: #213c13;
+}
+#main-news .list-post-entry p {
+  line-height: 30px;
+  margin-bottom: 0;
+}
+.post-details {
+  background: url("../gfx/light-bg.png");
+  padding: 30px;
+}
+.post-details .post-details-title {
+  color: #213c13;
+  margin-bottom: 20px;
+  border-bottom: 1px solid #eaeaea;
+  padding-bottom: 30px;
+  padding-top: 35px;
+}
 /* Location
 ================================================== */
 #location {
