--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -987,6 +987,57 @@ section {
     }
 }
 
+/* Blog/news
+================================================== */
+#main-news {
+    .container {
+        background: url("../gfx/light-bg.png");
+        padding: 30px;
+        position: relative;
+        -webkit-transition: all 200ms linear;
+        -moz-transition: all 200ms linear;
+        -o-transition: all 200ms linear;
+        transition: all 200ms linear;
+        -webkit-box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0);
+        -moz-box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0);
+        box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0);
+        top:0;
+        &:hover {
+            top: -5px;
+            -webkit-box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.38);
+            -moz-box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.38);
+            box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.38);
+        }
+    }
+    .article-header {
+        h2 {
+            margin-bottom: 20px;
+            a {
+                color: #213c13;
+            }
+        }
+    }
+    .list-post-entry {
+        p {
+            line-height: 30px;
+            margin-bottom: 0;
+        }
+    }
+}
+.post-details {
+    background: url("../gfx/light-bg.png");
+    padding: 30px;
+    .post-details-title {
+        color: #213c13;
+        margin-bottom: 20px;
+        border-bottom: 1px solid #eaeaea;
+        padding-bottom: 30px;
+        padding-top: 35px;
+    }
+}
+
+
+
 /* Location
 ================================================== */
 #location {
